--- a/_modules/sigkit/modem/psk.html
+++ b/_modules/sigkit/modem/psk.html
@@ -204,10 +204,9 @@
 <span class="sd">        Returns:</span>
 <span class="sd">            1D array of bits.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">signal</span><span class="p">,</span> <span class="n">Signal</span><span class="p">):</span>
-            <span class="n">x</span> <span class="o">=</span> <span class="n">signal</span><span class="o">.</span><span class="n">samples</span>
-        <span class="k">else</span><span class="p">:</span>
-            <span class="n">x</span> <span class="o">=</span> <span class="n">signal</span>
+        <span class="n">x</span> <span class="o">=</span> <span class="n">signal</span><span class="o">.</span><span class="n">samples</span> <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">signal</span><span class="p">,</span> <span class="n">Signal</span><span class="p">)</span> <span class="k">else</span> <span class="n">signal</span>
+        <span class="k">if</span> <span class="ow">not</span> <span class="n">x</span><span class="o">.</span><span class="n">dtype</span> <span class="o">==</span> <span class="n">np</span><span class="o">.</span><span class="n">complex64</span><span class="p">:</span>
+            <span class="k">raise</span> <span class="n">SigKitError</span><span class="p">(</span><span class="s2">&quot;Demodulate expects samples to be of type np.complex64.&quot;</span><span class="p">)</span>
 
         <span class="n">indices</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">extract_symbols</span><span class="p">(</span><span class="n">x</span><span class="p">)</span>
         <span class="n">bin_indices</span> <span class="o">=</span> <span class="n">indices</span><span class="o">.</span><span class="n">copy</span><span class="p">()</span>
