deploy: 6d1fbf49a88b1f481b8c3bacc3a823662f282bd7

--- a/genindex.html
+++ b/genindex.html
@@ -154,10 +154,14 @@
 </li>
         <li><a href="api/sigkit.impairments.html#sigkit.impairments.frequency_shift.FrequencyShift.apply">(sigkit.impairments.frequency_shift.FrequencyShift method)</a>
 </li>
+        <li><a href="api/sigkit.impairments.html#sigkit.impairments.phase_shift.PhaseShift.apply">(sigkit.impairments.phase_shift.PhaseShift method)</a>
+</li>
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/sigkit.transforms.html#sigkit.transforms.awgn.ApplyAWGN">ApplyAWGN (class in sigkit.transforms.awgn)</a>
+</li>
+      <li><a href="api/sigkit.transforms.html#sigkit.transforms.phase_shift.ApplyPhaseShift">ApplyPhaseShift (class in sigkit.transforms.phase_shift)</a>
 </li>
       <li><a href="api/sigkit.impairments.html#sigkit.impairments.awgn.AWGN">AWGN (class in sigkit.impairments.awgn)</a>
 </li>
@@ -204,7 +208,11 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/sigkit.transforms.html#sigkit.transforms.awgn.ApplyAWGN.forward">forward() (sigkit.transforms.awgn.ApplyAWGN method)</a>
+
+      <ul>
+        <li><a href="api/sigkit.transforms.html#sigkit.transforms.phase_shift.ApplyPhaseShift.forward">(sigkit.transforms.phase_shift.ApplyPhaseShift method)</a>
 </li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/sigkit.impairments.html#sigkit.impairments.frequency_shift.FrequencyShift">FrequencyShift (class in sigkit.impairments.frequency_shift)</a>
@@ -253,6 +261,8 @@
 </li>
         <li><a href="api/sigkit.impairments.html#module-sigkit.impairments.frequency_shift">sigkit.impairments.frequency_shift</a>
 </li>
+        <li><a href="api/sigkit.impairments.html#module-sigkit.impairments.phase_shift">sigkit.impairments.phase_shift</a>
+</li>
         <li><a href="api/sigkit.metrics.html#module-sigkit.metrics">sigkit.metrics</a>
 </li>
         <li><a href="api/sigkit.metrics.html#module-sigkit.metrics.integrity">sigkit.metrics.integrity</a>
@@ -269,6 +279,8 @@
 </li>
         <li><a href="api/sigkit.transforms.html#module-sigkit.transforms.awgn">sigkit.transforms.awgn</a>
 </li>
+        <li><a href="api/sigkit.transforms.html#module-sigkit.transforms.phase_shift">sigkit.transforms.phase_shift</a>
+</li>
       </ul></li>
   </ul></td>
 </tr></table>
@@ -276,16 +288,18 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/sigkit.impairments.html#sigkit.impairments.phase_shift.PhaseShift">PhaseShift (class in sigkit.impairments.phase_shift)</a>
+</li>
       <li><a href="api/sigkit.metrics.html#sigkit.metrics.visuals.plot_constellation">plot_constellation() (in module sigkit.metrics.visuals)</a>
 </li>
       <li><a href="api/sigkit.metrics.html#sigkit.metrics.visuals.plot_frequency">plot_frequency() (in module sigkit.metrics.visuals)</a>
 </li>
       <li><a href="api/sigkit.metrics.html#sigkit.metrics.visuals.plot_phase">plot_phase() (in module sigkit.metrics.visuals)</a>
 </li>
-      <li><a href="api/sigkit.metrics.html#sigkit.metrics.visuals.plot_psd">plot_psd() (in module sigkit.metrics.visuals)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/sigkit.metrics.html#sigkit.metrics.visuals.plot_psd">plot_psd() (in module sigkit.metrics.visuals)</a>
+</li>
       <li><a href="api/sigkit.metrics.html#sigkit.metrics.visuals.plot_spectrogram">plot_spectrogram() (in module sigkit.metrics.visuals)</a>
 </li>
       <li><a href="api/sigkit.metrics.html#sigkit.metrics.visuals.plot_time">plot_time() (in module sigkit.metrics.visuals)</a>
@@ -367,6 +381,13 @@
         <li><a href="api/sigkit.impairments.html#module-sigkit.impairments.frequency_shift">module</a>
 </li>
       </ul></li>
+      <li>
+    sigkit.impairments.phase_shift
+
+      <ul>
+        <li><a href="api/sigkit.impairments.html#module-sigkit.impairments.phase_shift">module</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
@@ -423,6 +444,13 @@
 
       <ul>
         <li><a href="api/sigkit.transforms.html#module-sigkit.transforms.awgn">module</a>
+</li>
+      </ul></li>
+      <li>
+    sigkit.transforms.phase_shift
+
+      <ul>
+        <li><a href="api/sigkit.transforms.html#module-sigkit.transforms.phase_shift">module</a>
 </li>
       </ul></li>
       <li><a href="api/sigkit.core.html#sigkit.core.base.SigKitError">SigKitError</a>
