--- a/genindex.html
+++ b/genindex.html
@@ -139,6 +139,7 @@
  | <a href="#F"><strong>F</strong></a>
  | <a href="#I"><strong>I</strong></a>
  | <a href="#M"><strong>M</strong></a>
+ | <a href="#N"><strong>N</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
@@ -177,6 +178,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/sigkit.core.html#sigkit.core.base.Signal.carrier_frequency">carrier_frequency (sigkit.core.base.Signal attribute)</a>
 </li>
+      <li><a href="api/sigkit.transforms.html#sigkit.transforms.utils.ComplexTo2D">ComplexTo2D (class in sigkit.transforms.utils)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -211,6 +214,10 @@
 
       <ul>
         <li><a href="api/sigkit.transforms.html#sigkit.transforms.phase_shift.ApplyPhaseShift.forward">(sigkit.transforms.phase_shift.ApplyPhaseShift method)</a>
+</li>
+        <li><a href="api/sigkit.transforms.html#sigkit.transforms.utils.ComplexTo2D.forward">(sigkit.transforms.utils.ComplexTo2D method)</a>
+</li>
+        <li><a href="api/sigkit.transforms.html#sigkit.transforms.utils.Normalize.forward">(sigkit.transforms.utils.Normalize method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -281,7 +288,17 @@
 </li>
         <li><a href="api/sigkit.transforms.html#module-sigkit.transforms.phase_shift">sigkit.transforms.phase_shift</a>
 </li>
+        <li><a href="api/sigkit.transforms.html#module-sigkit.transforms.utils">sigkit.transforms.utils</a>
+</li>
       </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="N">N</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/sigkit.transforms.html#sigkit.transforms.utils.Normalize">Normalize (class in sigkit.transforms.utils)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -451,6 +468,13 @@
 
       <ul>
         <li><a href="api/sigkit.transforms.html#module-sigkit.transforms.phase_shift">module</a>
+</li>
+      </ul></li>
+      <li>
+    sigkit.transforms.utils
+
+      <ul>
+        <li><a href="api/sigkit.transforms.html#module-sigkit.transforms.utils">module</a>
 </li>
       </ul></li>
       <li><a href="api/sigkit.core.html#sigkit.core.base.SigKitError">SigKitError</a>
