--- a/_modules/sigkit/transforms/phase_shift.html
+++ b/_modules/sigkit/transforms/phase_shift.html
@@ -132,7 +132,7 @@
 <span></span><span class="sd">&quot;&quot;&quot;Module for PhaseShift Torch Transform.&quot;&quot;&quot;</span>
 
 <span class="kn">import</span><span class="w"> </span><span class="nn">math</span>
-<span class="kn">from</span><span class="w"> </span><span class="nn">typing</span><span class="w"> </span><span class="kn">import</span> <span class="n">Tuple</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">typing</span><span class="w"> </span><span class="kn">import</span> <span class="n">Tuple</span><span class="p">,</span> <span class="n">Union</span>
 
 <span class="kn">import</span><span class="w"> </span><span class="nn">torch</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">torch</span><span class="w"> </span><span class="kn">import</span> <span class="n">nn</span>
@@ -143,16 +143,16 @@
 <div class="viewcode-block" id="ApplyPhaseShift">
 <a class="viewcode-back" href="../../../api/sigkit.transforms.html#sigkit.transforms.phase_shift.ApplyPhaseShift">[docs]</a>
 <span class="k">class</span><span class="w"> </span><span class="nc">ApplyPhaseShift</span><span class="p">(</span><span class="n">nn</span><span class="o">.</span><span class="n">Module</span><span class="p">):</span>
-<span class="w">    </span><span class="sd">&quot;&quot;&quot;Apply a constant or random phase offset to a (2, N) I/Q torch.Tensor.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Apply a constant or random phase offset to a 1D complex64 torch.Tensor.</span>
 
 <span class="sd">    Args:</span>
 <span class="sd">        phase_offset:</span>
-<span class="sd">            - If float or int: apply that fixed phase (radians).</span>
-<span class="sd">            - If tuple of two numbers (min_phase, max_phase):</span>
-<span class="sd">              pick a random phase uniformly in each forward() call.</span>
+<span class="sd">            - If a single float or int: apply that fixed phase (radians).</span>
+<span class="sd">            - If a tuple/list of two floats: (min_phase, max_phase), pick</span>
+<span class="sd">              random uniform phi from [min_phase, max_phase] per call</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
-    <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">phase_offset</span><span class="p">:</span> <span class="nb">float</span> <span class="o">|</span> <span class="n">Tuple</span><span class="p">[</span><span class="nb">float</span><span class="p">,</span> <span class="nb">float</span><span class="p">]):</span>
+    <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">phase_offset</span><span class="p">:</span> <span class="n">Union</span><span class="p">[</span><span class="nb">float</span><span class="p">,</span> <span class="n">Tuple</span><span class="p">[</span><span class="nb">float</span><span class="p">,</span> <span class="nb">float</span><span class="p">]]):</span>
         <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">()</span>
         <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">phase_offset</span><span class="p">,</span> <span class="p">(</span><span class="nb">int</span><span class="p">,</span> <span class="nb">float</span><span class="p">)):</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">min_phi</span> <span class="o">=</span> <span class="nb">float</span><span class="p">(</span><span class="n">phase_offset</span><span class="p">)</span>
@@ -166,28 +166,21 @@
             <span class="bp">self</span><span class="o">.</span><span class="n">max_phi</span> <span class="o">=</span> <span class="nb">float</span><span class="p">(</span><span class="n">phase_offset</span><span class="p">[</span><span class="mi">1</span><span class="p">])</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="k">raise</span> <span class="n">SigKitError</span><span class="p">(</span>
-                <span class="s2">&quot;ApplyPhaseShift: phase_offset must be a number or 2‐tuple range,&quot;</span>
-                <span class="sa">f</span><span class="s2">&quot;got </span><span class="si">{</span><span class="n">phase_offset</span><span class="si">!r}</span><span class="s2">&quot;</span>
+                <span class="sa">f</span><span class="s2">&quot;ApplyPhaseShift: phase_offset must be a single number or a tuple of &quot;</span>
+                <span class="sa">f</span><span class="s2">&quot;two numbers, got </span><span class="si">{</span><span class="n">phase_offset</span><span class="si">!r}</span><span class="s2">&quot;</span>
             <span class="p">)</span>
 
 <div class="viewcode-block" id="ApplyPhaseShift.forward">
 <a class="viewcode-back" href="../../../api/sigkit.transforms.html#sigkit.transforms.phase_shift.ApplyPhaseShift.forward">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">forward</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">x</span><span class="p">:</span> <span class="n">torch</span><span class="o">.</span><span class="n">Tensor</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">torch</span><span class="o">.</span><span class="n">Tensor</span><span class="p">:</span>
-<span class="w">        </span><span class="sd">&quot;&quot;&quot;Applies a PhaseShift to the Tensor.</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Applies the PhaseShift to the Tensor.&quot;&quot;&quot;</span>
+        <span class="k">if</span> <span class="n">x</span><span class="o">.</span><span class="n">dtype</span> <span class="o">!=</span> <span class="n">torch</span><span class="o">.</span><span class="n">complex64</span> <span class="ow">or</span> <span class="n">x</span><span class="o">.</span><span class="n">ndim</span> <span class="o">!=</span> <span class="mi">1</span><span class="p">:</span>
+            <span class="k">raise</span> <span class="n">SigKitError</span><span class="p">(</span>
+                <span class="sa">f</span><span class="s2">&quot;ApplyPhaseShift expects a 1D tensor of dtype=torch.complex64, &quot;</span>
+                <span class="sa">f</span><span class="s2">&quot;got </span><span class="si">{</span><span class="n">x</span><span class="o">.</span><span class="n">shape</span><span class="si">=}</span><span class="s2">, </span><span class="si">{</span><span class="n">x</span><span class="o">.</span><span class="n">dtype</span><span class="si">=}</span><span class="s2">&quot;</span>
+            <span class="p">)</span>
 
-<span class="sd">        Args:</span>
-<span class="sd">            x: torch.Tensor of shape (2, N), dtype=torch.float32, where</span>
-<span class="sd">               row 0 = I, row 1 = Q.</span>
-
-<span class="sd">        Returns:</span>
-<span class="sd">            A new torch.Tensor of shape (2, N), dtype=torch.float32, with a phase</span>
-<span class="sd">            rotation by phi, where phi is either the fixed value or</span>
-<span class="sd">            a random sample in [min_phi, max_phi].</span>
-<span class="sd">        &quot;&quot;&quot;</span>
-        <span class="k">if</span> <span class="p">(</span><span class="n">x</span><span class="o">.</span><span class="n">ndim</span> <span class="o">!=</span> <span class="mi">2</span><span class="p">)</span> <span class="ow">or</span> <span class="p">(</span><span class="n">x</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="o">!=</span> <span class="mi">2</span><span class="p">)</span> <span class="ow">or</span> <span class="p">(</span><span class="n">x</span><span class="o">.</span><span class="n">dtype</span> <span class="o">!=</span> <span class="n">torch</span><span class="o">.</span><span class="n">float32</span><span class="p">):</span>
-            <span class="k">raise</span> <span class="n">SigKitError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;PhaseShiftTorch expects shape (2, N), got </span><span class="si">{</span><span class="n">x</span><span class="o">.</span><span class="n">shape</span><span class="si">=}</span><span class="s2">&quot;</span><span class="p">)</span>
-
-        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">min_phi</span> <span class="o">==</span> <span class="bp">self</span><span class="o">.</span><span class="n">max_phi</span><span class="p">:</span>  <span class="c1"># fixed</span>
+        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">min_phi</span> <span class="o">==</span> <span class="bp">self</span><span class="o">.</span><span class="n">max_phi</span><span class="p">:</span>
             <span class="n">phi</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">min_phi</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="n">r</span> <span class="o">=</span> <span class="n">torch</span><span class="o">.</span><span class="n">rand</span><span class="p">(</span><span class="mi">1</span><span class="p">)</span><span class="o">.</span><span class="n">item</span><span class="p">()</span>
@@ -195,11 +188,11 @@
 
         <span class="n">c</span> <span class="o">=</span> <span class="n">math</span><span class="o">.</span><span class="n">cos</span><span class="p">(</span><span class="n">phi</span><span class="p">)</span>
         <span class="n">s</span> <span class="o">=</span> <span class="n">math</span><span class="o">.</span><span class="n">sin</span><span class="p">(</span><span class="n">phi</span><span class="p">)</span>
-
-        <span class="c1"># (2, N) row 0 = I, row 1 = Q</span>
-        <span class="k">return</span> <span class="n">torch</span><span class="o">.</span><span class="n">stack</span><span class="p">([(</span><span class="n">x</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="o">*</span> <span class="n">c</span> <span class="o">-</span> <span class="n">x</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span> <span class="o">*</span> <span class="n">s</span><span class="p">),</span> <span class="p">(</span><span class="n">x</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="o">*</span> <span class="n">s</span> <span class="o">+</span> <span class="n">x</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span> <span class="o">*</span> <span class="n">c</span><span class="p">)],</span> <span class="n">dim</span><span class="o">=</span><span class="mi">0</span><span class="p">)</span></div>
+        <span class="n">phase_factor</span> <span class="o">=</span> <span class="n">torch</span><span class="o">.</span><span class="n">complex</span><span class="p">(</span>
+            <span class="n">torch</span><span class="o">.</span><span class="n">tensor</span><span class="p">(</span><span class="n">c</span><span class="p">,</span> <span class="n">dtype</span><span class="o">=</span><span class="n">torch</span><span class="o">.</span><span class="n">float32</span><span class="p">),</span> <span class="n">torch</span><span class="o">.</span><span class="n">tensor</span><span class="p">(</span><span class="n">s</span><span class="p">,</span> <span class="n">dtype</span><span class="o">=</span><span class="n">torch</span><span class="o">.</span><span class="n">float32</span><span class="p">)</span>
+        <span class="p">)</span>
+        <span class="k">return</span> <span class="n">x</span> <span class="o">*</span> <span class="n">phase_factor</span></div>
 </div>
-
 
 </pre></div>
 
